<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KotlinContactApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="kotlin_contact_app">Kotlin Contact App</string>
    <string name="android_sample_app_with_kotlin">Android sample app with Kotlin.</string>
    <string name="you_not_have_at_account">You not have at account?</string>
    <string name="register" tools:ignore="ExtraTranslation">Register</string>
    <string name="create_an_account">Create an account.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="profile_name">Profile name</string>
    <string name="example_email_com">example@email.com</string>
    <string name="address_detail">Address detail</string>
    <string name="contact_list">Contact List</string>
</resources>
