<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAppBGDark"
        tools:context=".Controllers.LoginActivity">

    <TextView
            android:text="@string/kotlin_contact_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/appTitleText"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic"
            android:textSize="30sp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504" android:textAlignment="center"/>
    <TextView
            android:text="@string/android_sample_app_with_kotlin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/appSubtitleText"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorAppGray"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/appTitleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameInput"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:layout_marginTop="48dp"
            android:textColor="@android:color/white"
            android:hint="@string/username"
            android:background="@color/colorAppTransparent"
            android:textColorHint="@color/colorAppGray"
            android:textCursorDrawable="@drawable/cursor_white_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/appSubtitleText"
            tools:ignore="Autofill" android:textSize="14sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="1dp"
            android:hint="@string/password"
            android:background="@color/colorAppTransparent"
            android:textColorHint="@color/colorAppGray"
            android:textCursorDrawable="@drawable/cursor_white_style"
            app:layout_constraintTop_toBottomOf="@+id/usernameInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="Autofill" android:textSize="14sp"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:id="@+id/loginButton"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_style"
            android:layout_marginEnd="32dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/you_not_have_at_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginDescText"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/view" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/view"/>
    <TextView
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerText"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/view" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/view"/>
    <View
            android:layout_width="232dp"
            android:layout_height="51dp"
            android:id="@+id/view" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/loginButton"/>
</android.support.constraint.ConstraintLayout>