<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clipToPadding="false"
            android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAppBGDark"
            tools:context=".controllers.RegisterActivity" android:id="@+id/registerConstraintLayout">

        <android.support.v7.widget.Toolbar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/registerToolbar" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/registerTitleText" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="64dp"
                app:layout_constraintEnd_toEndOf="@+id/registerToolbar" android:layout_marginEnd="64dp"
                app:layout_constraintBottom_toBottomOf="@+id/registerToolbar"
                android:textSize="18sp" android:textColor="@android:color/white" android:textAlignment="center"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/create_an_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/registerSubtitleText"
                android:textColor="@color/colorAppGray"
                android:textAlignment="center"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/registerToolbar"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/usernameInput"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:textColor="@android:color/white"
                android:hint="@string/username"
                android:background="@color/colorAppTransparent"
                android:textColorHint="@color/colorAppGray"
                android:textCursorDrawable="@drawable/cursor_white_style"
                tools:ignore="Autofill" android:textSize="14sp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/registerSubtitleText" android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordInput"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:textColor="@android:color/white"
                android:layout_marginTop="1dp"
                android:hint="@string/password"
                android:background="@color/colorAppTransparent"
                android:textColorHint="@color/colorAppGray"
                android:textCursorDrawable="@drawable/cursor_white_style"
                app:layout_constraintTop_toBottomOf="@+id/usernameInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="Autofill" android:textSize="14sp" app:layout_constraintHorizontal_bias="0.0"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/firstNameInput"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:textColor="@android:color/white"
                android:hint="@string/first_name"
                android:background="@color/colorAppTransparent"
                android:textColorHint="@color/colorAppGray"
                android:textCursorDrawable="@drawable/cursor_white_style"
                tools:ignore="Autofill" android:textSize="14sp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/passwordInput"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/lastNameInput"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:textColor="@android:color/white"
                android:hint="@string/last_name"
                android:background="@color/colorAppTransparent"
                android:textColorHint="@color/colorAppGray"
                android:textCursorDrawable="@drawable/cursor_white_style"
                tools:ignore="Autofill" android:textSize="14sp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/firstNameInput"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailInput"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:textColor="@android:color/white"
                android:hint="@string/e_mail"
                android:background="@color/colorAppTransparent"
                android:textColorHint="@color/colorAppGray"
                android:textCursorDrawable="@drawable/cursor_white_style"
                tools:ignore="Autofill" android:textSize="14sp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="1dp" app:layout_constraintTop_toBottomOf="@+id/lastNameInput"/>
        <Button
                android:text="@string/register"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:id="@+id/registerButton"
                android:layout_marginStart="32dp"
                android:textColor="@android:color/white"
                android:background="@drawable/button_style"
                android:layout_marginEnd="32dp"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/emailInput" android:onClick="onRegister"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/registerToolbar"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>